<resources>


    <!--für die App-->
    <string name="app_name">Gymnasium Hochrad</string>
    <string name="GymnHochradLOGO">Gymnasium Hochrad Logo</string>

    <array name="draweritems">
        <item>Blub</item>
    </array>


    <string name="drawer_open">Öffne die Navigationsleiste</string>
    <string name="drawer_close">Schließe die Navigationsleiste</string>

    <string name="my_own_title_rateme">Bewerte die App</string>
    <string name="my_own_message_rateme">Gefällt dir die App? Ich würde mich freuen, wenn du die App im Google
        Play-Store bewerten könntest. Ein kurzes Feedback würde mich sehr freuen!
        Schick mir eine Mail mit deinen Verbesserungsvorschlägen! Danke für die Unterstützung und viel Spaß mit der App!
    </string>

    <!--Startseite-->
    <string name="NachrichtenzumTag">
        <u>Nachrichten zum Tag:</u>
    </string>


    <!--für den Vertretungsplan-->
    <string name="Information">Information</string>
    <string name="Stunde">Stunde</string>
    <string name="Klasse">Klasse</string>
    <string name="Fach">Fach</string>
    <string name="Raum">Raum</string>
    <string name="stattFach">statt Fach</string>
    <string name="stattRaum">statt Raum</string>
    <string name="Art">Art</string>
    <string name="Tag">Tag</string>


    <!--Vertretungsplan Strings-->
    <!--für die Wochenauswahl-->
    <string name="AlleKlassen">Alle Klassen</string>
    <string name="WähleeineWoche">Wähle eine Woche</string>
    <string name="aktuelleWoche">aktuelle Woche</string>
    <string name="nächsteWoche">nächste Woche</string>
    <string name="Vertretungsplan">Vertretungsplan</string>


    <!--für die Klassenauswahl-->
    <string name="klassenauswahlh">Klassenauswahl</string>
    <string name="InfofürDeineKlasse">Deine Klasse kannst du in den Einstellungen ändern.</string>
    <string name="AlleKlassenInfo">Du solltest eine schnelle Internet-Verbindung haben.</string>
    <string name="DeineKlasse">Deine Klasse</string>


    <!--für die Einstellungen-->
    <string name="Klassenauswahl">Klassenauswahl:</string>
    <string name="Klassenauswahlsettings">Hier kannst du deine Klasse einstellen. (Ich überwache für dich ob es neue
        Vertretungen gibt!)
    </string>
    <string name="Einstellungen">Einstellungen</string>

    <!--für den Notifikation-Service-->
    <string name="vertretungsplanupdate">Neue Vertretungen für deine Klasse</string>

    <!--für die Überseite-->
    <string name="Über">Über</string>


    <!--für den Speiseplan-->
    <string name="Speiseplan">Speiseplan</string>

    <!--für den Speiseplan-->
    <string name="Wochenplan">Wochenplan</string>

    <!--für die Überseite-->
    <string name="Reporte">Für <b>Vorschläge</b>, <b>Anmerkungen</b> oder <b>Hilfe</b> bitte eine Email an:
    </string>
    <string name="Email">vertretungsplan.app@hochrad.de</string>
    <string name="Recht">Alle Informationen, die in der App gezeigt werden sind von der Webseite des
        <a href="http://bit.ly/1LrQbno">Gymnasium Hochrad.</a>
    </string>
    <string name="Entwickler">Die App wird von <b>Finn von Holten</b> vom Gymnasium Hochrad entwickelt, gepflegt und
        designt.
    </string>


    <!--anderes-->
    <string name="Zurück">Zurück</string>
    <string name="Einstellungengespeichert">NEU: Jetzt überwache ich die Vertretungen der Klasse:</string>
    <string name="aktuelleÜberwachung">Aktuell überwache ich die Vertretungen der Klasse:</string>


    <string name="Laden">Überprüfe deine Verbindung!</string>
    <string name="retry">Retry!</string>
    <string name="appwidget_text">Kommt Bald!</string>
    <string name="add_widget">Add widget</string>

    <string name="stundenzeiten">Stundenzeiten</string>
    <string name="Startseite">Startseite</string>
    <string name="NotificationSwitch">Benachrichtigungen</string>
    <string name="NotificationTextView">Wie oft soll der Vertretungsplan überprüft werden?</string>
    <string name="AllexStunden2">Stunden.</string>
    <string name="AllexStunden">Alle</string>
    <string name="Speichern">Speichern</string>
    <string name="mitklassenauswahl_key">mitklassenauswahl</string>
    <string name="klassenauswahl_key">klassenauswahl</string>
    <string name="wochenauswahl_key">wochenauswahl</string>
    <string name="wochennummer_key">wochennummer</string>
    <string name="selectedItem_key">selectedItem</string>

    <string-array name="WähleWoche">
        <item>Wähle eine Woche</item>
        <item>aktuelle Woche</item>
    </string-array>

    <string-array name="Zeiten">
        <item>1. Stunde: 07:50 – 08:35</item>
        <item>2. Stunde: 08:35 – 09:20</item>
        <item>Pause: 09:20 – 09:45</item>
        <item>3. Stunde: 09:45 – 10:30</item>
        <item>4. Stunde: 10:30 – 11:15</item>
        <item>Pause: 11:15 – 11:40</item>
        <item>5. Stunde: 11:40 – 12:25</item>
        <item>Pause: 12:25 – 12:30</item>
        <item>6. Stunde: 12:30 – 13:15</item>
        <item>Pause: 13:15 – 13:25</item>
        <item>7. Stunde: 13:25 – 14:10</item>
        <item>Pause: 14:10 – 14:15</item>
        <item>8. Stunde: 14:15 – 15:00</item>
        <item>9. Stunde: 15:00 – 15:45</item>
        <item>10. Stunde: 15:45 – 16:30</item>
        <item>11. Stunde: 16:30 – 17:15</item>
        <item>Schulschluss!</item>
    </string-array>


</resources>