<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal"
			  android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
	<TextView android:textSize="15sp" android:textColor="@android:color/black" android:id="@+id/Wochentag"
			  android:layout_width="100dp" android:layout_height="wrap_content" android:text="@string/Tag"/>
	<TextView android:textSize="15sp" android:textColor="@android:color/holo_red_dark" android:id="@+id/Stunde"
			  android:layout_width="80dp" android:layout_height="wrap_content" android:text="@string/Stunde"/>
	<TextView android:textSize="15sp" android:textColor="@android:color/holo_green_dark" android:id="@+id/Fach"
			  android:layout_width="80dp" android:layout_height="wrap_content" android:text="@string/Fach"/>
	<TextView android:textSize="15sp" android:textColor="@android:color/holo_blue_dark"
			  android:id="@+id/Raumbezeichnung" android:layout_width="80dp" android:layout_height="wrap_content"
			  android:text="@string/Raum"/>
	<TextView android:textSize="15sp" android:textColor="@android:color/black" android:id="@+id/Art"
			  android:layout_width="100dp" android:layout_height="wrap_content" android:text="@string/Art"/>
	<TextView android:textSize="15sp" android:textColor="@android:color/holo_orange_dark"
			  android:id="@+id/Informationen" android:layout_width="wrap_content" android:layout_height="wrap_content"
			  android:text="@string/Information"/>
</LinearLayout>
