<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="900dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Wochentag"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Tag"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/Stunde"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/Stunde"
            android:textColor="@color/red"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/Fach"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/Fach"
            android:textColor="@color/darkpurple"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/Raumbezeichnung"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/Raum"
            android:textColor="@color/darkblue"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/stattFach"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/stattFach"
            android:textColor="@color/darkorange"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/stattRaum"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/stattRaum"
            android:textColor="@color/green"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/Art"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Art"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/Informationen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Information"
            android:textColor="@color/yellow"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="950dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="1000dp"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="15dp" />

    </LinearLayout>

</LinearLayout>