<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:app="http://schemas.android.com/apk/res-auto"
			  android:orientation="vertical" android:padding="5dp" android:layout_width="match_parent"
			  android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
	<TextView android:textColor="#838383"
			  android:layout_gravity="top|right|center_vertical|center_horizontal|center|end"
			  android:id="@+id/version_text_view" android:layout_width="wrap_content"
			  android:layout_height="wrap_content"/>
	<TextView android:id="@+id/recht_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content"
			  android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp"
			  android:text="@string/Recht"/>
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp"
			  android:layout_marginTop="25dp" android:layout_marginRight="10dp" android:layout_marginBottom="10dp"
			  android:text="@string/Reporte"/>
	<TextView android:textColorLink="#002a50" android:autoLink="email" android:linksClickable="true"
			  android:layout_gravity="center_horizontal" android:layout_width="wrap_content"
			  android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="2dp"
			  android:layout_marginRight="10dp" android:text="@string/Email"/>
	<TextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content"
			  android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="30dp"
			  android:layout_marginRight="10dp" android:text="@string/Entwickler"/>
</LinearLayout>
