<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:app="http://schemas.android.com/apk/res-auto"
			  android:orientation="vertical" android:padding="5dp" android:layout_width="match_parent"
			  android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
	<TextView android:textSize="25sp" android:layout_gravity="center_horizontal" android:id="@+id/textView2"
			  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp"
			  android:text="@string/DeineKlasse"/>
	<TextView android:textSize="15sp" android:gravity="center_horizontal" android:id="@+id/textViewInfo"
			  android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp"
			  android:layout_marginTop="10dp" android:layout_marginRight="20dp" android:layout_marginBottom="10dp"
			  android:text="@string/InfofürDeineKlasse"/>
	<Spinner android:id="@+id/deineKlasse" android:background="@color/spinner" android:layout_width="match_parent"
			 android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="10dp"
			 android:layout_marginRight="20dp"/>
	<TextView android:textSize="25sp" android:layout_gravity="center_horizontal" android:id="@+id/textView"
			  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp"
			  android:text="@string/AlleKlassen"/>
	<Spinner android:id="@+id/week" android:background="@color/spinner" android:layout_width="match_parent"
			 android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="10dp"
			 android:layout_marginRight="20dp"/>
</LinearLayout>
