<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="5dp"
              app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Klassenauswahlsettings"/>

    <TextView
            android:id="@+id/wahl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"/>

    <Spinner
            android:id="@+id/klassenauswahlspinner"
            style="@style/Widget.MyApp.HeaderBar.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/spinner"/>

    <Switch
            android:id="@+id/switchNotifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:switchPadding="10dp"
            android:text="@string/NotificationSwitch"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/SwitchON"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="invisible">

        <TextView
                android:id="@+id/textViewNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NotificationTextView"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/textViewStunden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/AllexStunden"/>

            <EditText
                    android:id="@+id/editNotification"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:inputType="numberDecimal"
                    android:nextFocusUp="@id/editNotification"
                    android:nextFocusLeft="@id/editNotification"
                    android:maxLength="2"
                    android:numeric="integer"/>

            <TextView
                    android:id="@+id/textViewAlle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/AllexStunden2"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>