<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp"
                android:background="@color/colorPrimaryDark"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <RelativeLayout
            android:layout_above="@+id/progressBarloadscreen"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/gymansiumhochrad"/>

        <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/Laden"
                android:layout_below="@+id/imageView2"
                android:textColor="#ffffff"/>

    </RelativeLayout>


    <ProgressBar
            android:layout_centerInParent="true"
            android:id="@+id/progressBarloadscreen"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"/>

    <Button
            android:id="@+id/retry"
            style="@style/AppTheme"
            android:layout_below="@+id/progressBarloadscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#00345e"
            android:layout_centerInParent="true"
            android:text="@string/retry"
            android:textColor="#c3cdd6"/>

</RelativeLayout>
